syntax = "proto3";
package api;

import "google/api/annotations.proto";
import "github.com/pensando/sw/venice/utils/apigen/annotations/venice.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

  option (gogoproto.unmarshaler_all) = true;
  option (gogoproto.marshaler_all) = true;

// TypeMeta contains the metadata about kind and version for all API objects.
message TypeMeta {
  // Kind represents the type of the API object.
  string Kind       = 1 [(gogoproto.jsontag) = "kind"];
  // APIVersion defines the version of the API object. This can only be set by the server
  string APIVersion = 2 [(gogoproto.jsontag) = "api-version,omitempty"];
}

// ListMeta contains the metadata for list of objects.
message ListMeta {
  // Resource version of object store at the time of list generation.
  string ResourceVersion = 1 [(gogoproto.jsontag) = "resource-version,omitempty"];
}

message Timestamp {
  google.protobuf.Timestamp Time = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

// Any is wrapper around the proto Any object.
message Any {
  google.protobuf.Any Object  = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

// ObjectMeta contains metadata that all objects stored in kvstore must have.
message ObjectMeta {
  // Name of the object, unique within a Namespace for scoped objects.
  // Should start and end in an alphanumeric character and can contain alphanumeric or ._- characters
  // minimum length is 2 and maximum length is 64 characters
  string Name                 = 1 [(gogoproto.jsontag) = "name", (venice.check) = "RegExp(name)", (venice.check) = "StrLen(2,64)"];
  // Tenant to which the object belongs to. This can be automatically filled in many cases based on
  // the tenant the user, who created the object, belongs to.
  // Should start and end in an alphanumeric character and can contain only alphanumerics.
  // Minimum length is 1 and maximum length is 48 characters
  string Tenant               = 2 [(gogoproto.jsontag) = "tenant,omitempty", (venice.check) = "EmptyOrRegExp(alphanum)", (venice.check) = "EmptyOrStrLen(1,48)"];
  // Namespace of the object, for scoped objects.
  // Should start and end in an alphanumeric character and can contain alphanumeric or ._- characters
  // maximum length is 64 characters
  string Namespace            = 3 [(gogoproto.jsontag) = "namespace,omitempty"];
  // GenerationID is the generation Id for the object. This is incremented anytime there
  //  is an update to the user intent, including Spec update and any update to ObjectMeta.
  //  System generated and updated, not updatable by user.
  string GenerationID     = 4 [(gogoproto.jsontag) = "generation-id"];
  // Resource version in the object store. This is updated anytime there is any change to the object.
  //  System generated and updated, not updatable by user.
  string ResourceVersion      = 5[(gogoproto.jsontag) = "resource-version,omitempty"];
  // UUID is the unique identifier for the object. This is generated on creation of the object.
  // System generated, not updatable by user.
  string UUID                 = 6 [(gogoproto.jsontag) = "uuid,omitempty"];
  // Labels are arbitrary (key,value) pairs associated with any object.
  map <string, string> Labels = 7 [(gogoproto.jsontag) = "labels,omitempty"];
  // CreationTime is the creation time of the object
  //  System generated and updated, not updatable by user.
  Timestamp CreationTime      = 8 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "creation-time,omitempty"];
  // ModTime is the Last Modification time of the object
  //  System generated and updated, not updatable by user.
  Timestamp ModTime           = 9 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "mod-time,omitempty"];
  // SelfLink is a link for accessing this object. When the object is served from the API-GW it is the
  //  URI path. Example:
  //    - "/v1/tenants/tenants/tenant2" 
  //  System generated and updated, not updatable by user.
  string SelfLink             = 10 [(gogoproto.jsontag) = "self-link,omitempty"];
}

// ObjectRef contains identifying information about an object.
message ObjectRef {
  // Tenant of the object.
  string Tenant     = 1 [(gogoproto.jsontag) = "tenant,omitempty"];
  // Namespace of the object, for scoped objects.
  string Namespace  = 2 [(gogoproto.jsontag) = "namespace,omitempty"];
  // Kind represents the type of the API object.
  string Kind       = 3 [(gogoproto.jsontag) = "kind,omitempty"];
  // Name of the object, unique within a Namespace for scoped objects.
  string Name       = 4 [(gogoproto.jsontag) = "name,omitempty"];
  // URI is a link to accessing the referenced object.
  string URI        = 5 [(gogoproto.jsontag) = "uri,omitempty"];
}

message ListWatchOptions {
  enum SortOrders {
    None                  = 0; // ui-hint: None
    ByName                = 1; // ui-hint: By Name
    ByNameReverse         = 2; // ui-hint: By Name Reverse
    ByVersion             = 3; // ui-hint: By Version
    ByVersionReverse      = 4; // ui-hint: By Version Reverse
    ByCreationTime        = 5; // ui-hint: By Creation Time
    ByCreationTimeReverse = 6; // ui-hint: By Creation Time Reverse
    ByModTime             = 7; // ui-hint: By Modification Time
    ByModTimeReverse      = 8; // ui-hint: By Modification Time Reverse
  }
  ObjectMeta O                        = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ""];
  // LabelSelector to select on labels in list or watch results.
  string LabelSelector                = 2 [(gogoproto.jsontag) = "label-selector,omitempty"];
  // FieldSelector to select on field values in list or watch results
  string FieldSelector                = 3 [(gogoproto.jsontag) = "field-selector,omitempty"];
  // FieldChangeSelector specifies to generate a watch notification on change in field(s) specified.
  repeated string FieldChangeSelector = 5 [(gogoproto.jsontag) = "field-change-selector,omitempty"];
  // from represents the start offset (zero based), used for pagination.
  // results returned would be in the range [from ... from+max-results-1]
  int32 From                          = 6 [(gogoproto.jsontag) = "from,omitempty"];
  // max. number of events to be fetched for the request.
  int32 MaxResults                    = 7 [(gogoproto.jsontag) = "max-results,omitempty"];
  // order to sort List results in.
  string SortOrder                    = 8 [(gogoproto.jsontag) = "sort-order,omitempty", (venice.check) = "StrEnum(ListWatchOptions.SortOrders)"];
}

message WatchEvent {
  string Type = 1 [(gogoproto.jsontag) = "type,omitempty"];
  google.protobuf.Any Object = 2 [(gogoproto.jsontag) = "object,omitempty"];
}

message WatchEventList {
  repeated WatchEvent Events = 1 [(gogoproto.jsontag) = "events,omitempty"];
}

// StatusResult contains possible statuses for a NIC.
message StatusResult {
  string Str = 1;
}

message InterfaceSlice {
  repeated Interface Values = 1;
}

message Interface {
  oneof Value {
    string Str = 1;
    int64 Int64 = 2;
    bool Bool = 3;
    double Float = 4;
    InterfaceSlice Interfaces = 5;
  }
}

// Status is returned for calls that dont return objects.
message Status {
  TypeMeta T          = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ""];
  // Result contains the status of the operation, success or failure.
  StatusResult Result = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "result,omitempty"];
  // Message contains human readable form of the error.
  repeated string Message      = 3 [(gogoproto.jsontag) = "message,omitempty"];
  // Code is the HTTP status code.
  int32 Code          = 4 [(gogoproto.jsontag) = "code,omitempty"];
  // Reference to the object (optional) for which this status is being sent.
  ObjectRef Ref       = 5 [(gogoproto.jsontag) = "object-ref,omitempty"];
}

// Watch event types
enum EventType {
    CreateEvent   = 0;
    UpdateEvent   = 1;
    DeleteEvent   = 2;
}
